# docs/swagger.yaml
@@ -18,6 +18,28 @@ paths:
           schema:
             type: string
   /agent:
+    delete:
+      parameters:
+      - description: 组名
+        in: query
+        name: group_name
+        required: true
+        type: string
+      - description: agent名
+        in: query
+        name: agent_name
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 请求成功
+          schema:
+            type: string
+        "400":
+          description: 请求错误
+          schema:
+            type: string
     get:
       parameters:
       - description: 组名
